firmware/esp32/build/log/idf_py_stdout_output_7084
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.1.2\examples\test\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.1.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/9] Building C object esp-idf/http/CMakeFiles/__idf_http.dir/http.c.obj
FAILED: esp-idf/http/CMakeFiles/__idf_http.dir/http.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/build/config -IC:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/arch/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_eth/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_http_server/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/http_parser -IC:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/uart_driver -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/http/CMakeFiles/__idf_http.dir/http.c.obj -MF esp-idf\http\CMakeFiles\__idf_http.dir\http.c.obj.d -o esp-idf/http/CMakeFiles/__idf_http.dir/http.c.obj -c C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c:189:26: error: redefinition of 'post_switch4'
  189 | static const httpd_uri_t post_switch4 = {
      |                          ^~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c:159:26: note: previous definition of 'post_switch4' with type 'httpd_uri_t' {aka 'const struct httpd_uri'}
  159 | static const httpd_uri_t post_switch4 = {
      |                          ^~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c: In function 'http_start_webserver':
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c:251:50: error: 'post_switch5' undeclared (first use in this function); did you mean 'post_switch4'?
  251 |         httpd_register_uri_handler(http_server, &post_switch5);
      |                                                  ^~~~~~~~~~~~
      |                                                  post_switch4
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c:251:50: note: each undeclared identifier is reported only once for each function it appears in
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c: At top level:
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c:168:22: warning: 'switch5_handler' defined but not used [-Wunused-function]
  168 |     static esp_err_t switch5_handler(httpd_req_t *req)
      |                      ^~~~~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c:159:26: error: 'post_switch4' defined but not used [-Werror=unused-const-variable=]
  159 | static const httpd_uri_t post_switch4 = {
      |                          ^~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1.2/examples/test/lib/http/http.c:7:20: warning: 'REQ' defined but not used [-Wunused-variable]
    7 | static httpd_req_t REQ;
      |                    ^~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
